updated overflow fix on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html, body {
   background-color: #1B1F23;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
@@ -179,16 +179,15 @@ input::placeholder {
 
 @media only screen and (max-width: 649px) {
   /* html, body {
-    overflow-y: auto;
+    overflow-y: hidden;
   } */
 
-  .body {
-    height: -webkit-fill-available;
+  .App {
+    overflow-y: hidden;
   }
 
   .App-header {
     min-height: -webkit-fill-available;
-    overflow-y: hidden;
   }
 
   .fabIcon {
